adding src, modules and eval

--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -11,6 +11,7 @@ defaults:
   - extras: default.yaml
   - hydra: default.yaml
   - experiment: null
+#  - experiment: k600_splitted.yaml
 
 task_name: "eval"
 
