--- a/configs/model/video.yaml
+++ b/configs/model/video.yaml
@@ -2,7 +2,8 @@ _target_: src.models.video_module.VideoLitModule
 
 method: method
 network:
-  arch: ViT-B/32
+  #  arch: ViT-B/32
+  arch: ViT-B/16
   frame_aggregation_method: avg
   temperature: 1.0
 loss:
